4 files modified, 1 added

--- a/src/app/my-counter/my-counter.component.html
+++ b/src/app/my-counter/my-counter.component.html
@@ -1,5 +1,5 @@
-<button id="products" (click)="products()">Increment</button>
-<button id="sellers" (click)="sellers()">Decrement</button>
+<button id="products" (click)="products()">Products</button>
+<button id="sellers" (click)="sellers()">Sellers</button>
 
 
 
