--- a/src/app/my-counter/my-counter.component.css
+++ b/src/app/my-counter/my-counter.component.css
@@ -1,4 +1,11 @@
-
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  margin-left:auto;
+  margin-right:auto;
+  list-style-type:none;
+}
 
 /*
 Use of this source code is governed by an MIT-style license that
