--- a/src/app/my-counter/my-counter.component.html
+++ b/src/app/my-counter/my-counter.component.html
@@ -1,11 +1,18 @@
 <button id="products" (click)="products()">Products</button>
 <button id="sellers" (click)="sellers()">Sellers</button>
-<div *ngFor = "let items of productList">
-  <!-- <div *ngFor = "let items of product"> -->
-  <p>{{items.id}}
-    {{items.productName}}
-    {{items.description}}
-  </p>
+
+<div *ngFor = "let product of productList">
+   <ul *ngFor = "let items of product" > 
+    <div class="card" onclick="navigate()">
+     <li><img src = {{items.image}}  height="100" width="100" style="display: block;
+  margin-left: auto;
+  margin-right: auto;"></li>
+  <li > 
+   ID: {{items.id}}</li><br>
+    <li >Product Name:{{items.productName}}</li><br>
+    <li >Product Description: {{items.description}}</li><br>
+    </div>
+  </ul>
 
 </div>
 
