5 files modified, 1 added

--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -10,7 +10,7 @@
     <li >Product Name:{{items.productName}}</li><br>
     <li >Product Description: {{items.description}}</li><br>
     
-     <a routerLink="/products" onclick="navigate()">More info</a>
+     <a onclick="navigate(items.id)">More info</a>
     </div>
   </ul>
 
