--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-
-
-<app-my-counter></app-my-counter>
-
+<button id="products" routerLink="cartCom">Products</button>
+<button id="sellers" routerLink="sellers">Sellers</button>
+<router-outlet></router-outlet>
 <!-- 
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at https://github.com/ngrx/platform
