--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,12 +1,5 @@
-<div *ngFor = "let product of selectedList">
-   <ul *ngFor = "let items of product" > 
-    <div class="card">
-     <li><img src = {{items.image}}  height="100" width="100" style="display: block;
-  margin-left: auto;
-  margin-right: auto;"></li>
-    <li >Product Name:{{items.productName}}</li><br>
-    <li >Product Description: {{items.description}}</li><br>
-    </div>
-  </ul>
-
-</div>
+<!-- <div *ngIf = ""> -->
+    <p >Product Name:{{selectedList.productName}}</p><br>
+    <img [src]= "selectedList.image"  height="400" width="400">
+    <p >Product Description: {{selectedList.description}}</p>
+<!-- </div> -->
