--- a/src/app/my-cart/my-cart.component.css
+++ b/src/app/my-cart/my-cart.component.css
@@ -6,8 +6,27 @@
   margin-right:auto;
   list-style-type:none;
 }
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 500ms linear infinite;
+   position: absolute;
+  left: 50%;
+  margin-top : 20%;
+  margin-left: -50px;
+}
 
-/*
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://github.com/ngrx/platform
-*/
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
