--- a/src/app/sellers/sellers.component.html
+++ b/src/app/sellers/sellers.component.html
@@ -1,4 +1,5 @@
-
+<div *ngIf="productList===undefined"><div class="loader"></div>
+</div>
 <div *ngFor = "let product of productList ">
    <ul *ngFor = "let items of product, let i = index" > 
     <div class="card">
