9 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button id="products" routerLink="cartCom">Products</button>
+<button id="products" routerLink="cartCom" (click)="addCoin(true)">Products</button>
 <button id="sellers" routerLink="sellers">Sellers</button>
 <router-outlet></router-outlet>
 <!-- 
